--- a/gui_txt.glade
+++ b/gui_txt.glade
@@ -2,16 +2,28 @@
 <!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.12"/>
-  <requires lib="gtksourceview" version="3.0"/>
-  <object class="GtkAction" id="createNewBlock">
-    <property name="label" translatable="yes">New Block</property>
-    <property name="stock_id">gtk-file</property>
-    <signal name="activate" handler="Action_NewBlock" swapped="no"/>
+  <object class="GtkAction" id="commitEdits">
+    <property name="label" translatable="yes">Commit</property>
+    <signal name="activate" handler="Action_Commit" swapped="no"/>
   </object>
-  <object class="GtkAction" id="createNewTag">
-    <property name="label" translatable="yes">New Tag</property>
-    <property name="stock_id">gtk-directory</property>
-    <signal name="activate" handler="Action_NewTag" swapped="no"/>
+  <object class="GtkAction" id="copyText">
+    <property name="label" translatable="yes">Copy</property>
+    <property name="stock_id">gtk-copy</property>
+    <signal name="activate" handler="Action_CopyText" swapped="no"/>
+  </object>
+  <object class="GtkAction" id="cutText">
+    <property name="label" translatable="yes">Cut</property>
+    <property name="stock_id">gtk-cut</property>
+    <signal name="activate" handler="Action_CutText" swapped="no"/>
+  </object>
+  <object class="GtkAction" id="deleteText">
+    <property name="label" translatable="yes">Delete</property>
+    <property name="stock_id">gtk-delete</property>
+    <signal name="activate" handler="Action_DeleteText" swapped="no"/>
+  </object>
+  <object class="GtkTextBuffer" id="editBuffer">
+    <signal name="delete-range" handler="on_editBuffer_delete_range" swapped="no"/>
+    <signal name="insert-text" handler="on_editBuffer_insert_text" swapped="no"/>
   </object>
   <object class="GtkAction" id="editSelected">
     <property name="label" translatable="yes">Edit</property>
@@ -19,21 +31,36 @@
     <property name="stock_id">gtk-edit</property>
     <signal name="activate" handler="Action_Edit" swapped="no"/>
   </object>
+  <object class="GtkAccelGroup" id="editShortcuts"/>
   <object class="GtkFileFilter" id="filterNoteFiles">
     <mime-types>
       <mime-type>text/xml</mime-type>
     </mime-types>
   </object>
-  <object class="GtkAction" id="newNote">
+  <object class="GtkAction" id="newBlock">
+    <property name="label" translatable="yes">New Block</property>
+    <signal name="activate" handler="Action_NewBlock" swapped="no"/>
+  </object>
+  <object class="GtkAction" id="newProject">
     <property name="label" translatable="yes">New</property>
+    <property name="tooltip" translatable="yes">Create a new Project</property>
     <property name="stock_id">gtk-new</property>
     <signal name="activate" handler="Action_New" swapped="no"/>
   </object>
-  <object class="GtkAction" id="openNote">
+  <object class="GtkAction" id="newTag">
+    <property name="label" translatable="yes">New Tag</property>
+    <signal name="activate" handler="Action_NewTag" swapped="no"/>
+  </object>
+  <object class="GtkAction" id="openProject">
     <property name="label" translatable="yes">Open</property>
-    <property name="tooltip" translatable="yes">Open a new Note</property>
+    <property name="tooltip" translatable="yes">Open a new Project</property>
     <property name="stock_id">gtk-open</property>
     <signal name="activate" handler="Action_Open" swapped="no"/>
+  </object>
+  <object class="GtkAction" id="pasteText">
+    <property name="label" translatable="yes">Paste</property>
+    <property name="stock_id">gtk-paste</property>
+    <signal name="activate" handler="Action_PasteText" swapped="no"/>
   </object>
   <object class="GtkAction" id="quitApplication">
     <property name="label" translatable="yes">Quit</property>
@@ -41,9 +68,12 @@
     <property name="stock_id">gtk-quit</property>
     <signal name="activate" handler="Action_Quit" swapped="no"/>
   </object>
-  <object class="GtkAction" id="removeSelectedElement">
-    <property name="label" translatable="yes">Remove</property>
-    <property name="stock_id">gtk-remove</property>
+  <object class="GtkAction" id="redo">
+    <property name="label" translatable="yes">Redo</property>
+    <property name="stock_id">gtk-redo</property>
+    <signal name="activate" handler="Action_Redo" swapped="no"/>
+  </object>
+  <object class="GtkAction" id="removeElement">
     <signal name="activate" handler="Action_RemoveElement" swapped="no"/>
   </object>
   <object class="GtkAction" id="renameElement">
@@ -58,7 +88,7 @@
         <property name="related_action">editSelected</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="label" translatable="yes">Edit</property>
+        <property name="label" translatable="yes">_Edit</property>
         <property name="use_underline">True</property>
       </object>
     </child>
@@ -67,50 +97,57 @@
         <property name="related_action">renameElement</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="label" translatable="yes">Rename</property>
+        <property name="label" translatable="yes">_Rename</property>
         <property name="use_underline">True</property>
       </object>
     </child>
     <child>
       <object class="GtkMenuItem" id="deleteContextMenuItem">
-        <property name="related_action">removeSelectedElement</property>
+        <property name="related_action">removeElement</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="label" translatable="yes">Delete</property>
+        <property name="label" translatable="yes">_Delete</property>
         <property name="use_underline">True</property>
       </object>
     </child>
     <child>
       <object class="GtkMenuItem" id="newBlockContextMenuItem">
-        <property name="related_action">createNewBlock</property>
+        <property name="related_action">newBlock</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="label" translatable="yes">New Block</property>
+        <property name="label" translatable="yes">_New Block</property>
         <property name="use_underline">True</property>
       </object>
     </child>
     <child>
       <object class="GtkMenuItem" id="newTagContextMenuItem">
-        <property name="related_action">createNewTag</property>
+        <property name="related_action">newTag</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="label" translatable="yes">New Tag</property>
+        <property name="label" translatable="yes">New _Tag</property>
         <property name="use_underline">True</property>
       </object>
     </child>
   </object>
-  <object class="GtkAction" id="saveAsNote">
+  <object class="GtkAction" id="saveAsProject">
     <property name="label" translatable="yes">Save As</property>
     <property name="stock_id">gtk-save-as</property>
     <signal name="activate" handler="Action_SaveAs" swapped="no"/>
   </object>
-  <object class="GtkAction" id="saveNote">
+  <object class="GtkAction" id="saveProject">
     <property name="label" translatable="yes">Save</property>
     <property name="stock_id">gtk-save</property>
     <signal name="activate" handler="Action_Save" swapped="no"/>
   </object>
+  <object class="GtkAction" id="undo">
+    <property name="stock_id">gtk-undo</property>
+    <signal name="activate" handler="Action_Undo" swapped="no"/>
+  </object>
   <object class="GtkApplicationWindow" id="mainWindow">
     <property name="can_focus">False</property>
+    <accel-groups>
+      <group name="editShortcuts"/>
+    </accel-groups>
     <child>
       <object class="GtkBox" id="verticalAlignment">
         <property name="visible">True</property>
@@ -133,7 +170,7 @@
                     <child>
                       <object class="GtkImageMenuItem" id="fileNewMenuItem">
                         <property name="use_action_appearance">True</property>
-                        <property name="related_action">newNote</property>
+                        <property name="related_action">newProject</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
@@ -144,7 +181,7 @@
                       <object class="GtkImageMenuItem" id="fileOpenMenuItem">
                         <property name="label">gtk-open</property>
                         <property name="use_action_appearance">True</property>
-                        <property name="related_action">openNote</property>
+                        <property name="related_action">openProject</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
@@ -161,7 +198,7 @@
                       <object class="GtkImageMenuItem" id="fileSaveMenuItem">
                         <property name="label">gtk-save</property>
                         <property name="use_action_appearance">True</property>
-                        <property name="related_action">saveNote</property>
+                        <property name="related_action">saveProject</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Save Note</property>
@@ -173,7 +210,7 @@
                       <object class="GtkImageMenuItem" id="fileSaveAsMenuItem">
                         <property name="label">gtk-save-as</property>
                         <property name="use_action_appearance">True</property>
-                        <property name="related_action">saveAsNote</property>
+                        <property name="related_action">saveAsProject</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
@@ -206,8 +243,34 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <child>
+                      <object class="GtkImageMenuItem" id="editUndoMenuItem">
+                        <property name="related_action">undo</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="use_underline">True</property>
+                        <property name="use_stock">True</property>
+                        <property name="accel_group">editShortcuts</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkImageMenuItem" id="editRedoMenuItem">
+                        <property name="related_action">redo</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="use_underline">True</property>
+                        <property name="use_stock">True</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkSeparatorMenuItem" id="seperator">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                      </object>
+                    </child>
+                    <child>
                       <object class="GtkImageMenuItem" id="editCutMenuItem">
                         <property name="label">gtk-cut</property>
+                        <property name="related_action">cutText</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
@@ -217,6 +280,7 @@
                     <child>
                       <object class="GtkImageMenuItem" id="editCopyMenuItem">
                         <property name="label">gtk-copy</property>
+                        <property name="related_action">copyText</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
@@ -226,6 +290,7 @@
                     <child>
                       <object class="GtkImageMenuItem" id="editPasteMenuItem">
                         <property name="label">gtk-paste</property>
+                        <property name="related_action">pasteText</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
@@ -235,6 +300,7 @@
                     <child>
                       <object class="GtkImageMenuItem" id="editDeleteMenuITem">
                         <property name="label">gtk-delete</property>
+                        <property name="related_action">deleteText</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
@@ -304,10 +370,10 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="saveButton">
-                <property name="label" translatable="yes">Save</property>
-                <property name="use_action_appearance">True</property>
-                <property name="related_action">saveNote</property>
+              <object class="GtkButton" id="commitButton">
+                <property name="label" translatable="yes">Commit</property>
+                <property name="use_action_appearance">False</property>
+                <property name="related_action">commitEdits</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
@@ -362,11 +428,13 @@
                 <property name="hexpand">False</property>
                 <property name="shadow_type">in</property>
                 <child>
-                  <object class="GtkSourceView" id="editWindow">
+                  <object class="GtkTextView" id="editWindow">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="resize_mode">immediate</property>
                     <property name="wrap_mode">word-char</property>
-                    <property name="show_line_numbers">True</property>
+                    <property name="left_margin">10</property>
+                    <property name="buffer">editBuffer</property>
                   </object>
                 </child>
               </object>
