--- a/app/resources/gui_txt.glade
+++ b/app/resources/gui_txt.glade
@@ -37,6 +37,11 @@
       <mime-type>text/xml</mime-type>
     </mime-types>
   </object>
+  <object class="GtkAction" id="generateHtml">
+    <property name="label" translatable="yes">Render</property>
+    <property name="stock_id">gtk-file</property>
+    <signal name="activate" handler="Action_Render" swapped="no"/>
+  </object>
   <object class="GtkAction" id="newBlock">
     <property name="label" translatable="yes">New Block</property>
     <signal name="activate" handler="Action_NewBlock" swapped="no"/>
@@ -169,6 +174,7 @@
                     <property name="can_focus">False</property>
                     <child>
                       <object class="GtkImageMenuItem" id="fileNewMenuItem">
+                        <property name="label">gtk-new</property>
                         <property name="use_action_appearance">True</property>
                         <property name="related_action">newProject</property>
                         <property name="visible">True</property>
@@ -211,6 +217,16 @@
                         <property name="label">gtk-save-as</property>
                         <property name="use_action_appearance">True</property>
                         <property name="related_action">saveAsProject</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="use_underline">True</property>
+                        <property name="use_stock">True</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkImageMenuItem" id="fileRenderMenuItem">
+                        <property name="use_action_appearance">True</property>
+                        <property name="related_action">generateHtml</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
